--- a/QuanLiHoa/QLHoa.csproj
+++ b/QuanLiHoa/QLHoa.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\QuanLyNhanVien\QuanLyNhanVien.csproj" />
+    <ProjectReference Include="..\QuanLyBanHoa.Data\QuanLyBanHoa.Data.csproj" />
   </ItemGroup>
 
   <ItemGroup>
