--- a/QuanLyNhanVien/QuanLyNhanVien.csproj
+++ b/QuanLyNhanVien/QuanLyNhanVien.csproj
@@ -13,7 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\QuanLiDonHang\QuanLiDonHang.csproj" />
+    <ProjectReference Include="..\QuanLiHoa\QLHoa.csproj" />
+    <ProjectReference Include="..\QuanLiKhachHang\QLKhachHang.csproj" />
     <ProjectReference Include="..\QuanLyBanHoa.Data\QuanLyBanHoa.Data.csproj" />
+    <ProjectReference Include="..\QuanLyBanHoa\DangNhap.csproj" />
+    <ProjectReference Include="..\ThongKeBaoCao\ThongKeBaoCao.csproj" />
   </ItemGroup>
 
 </Project>
