UI: rearranged FormDonHang layout; hide MaKM feature; allow manual order code input; related adjustments

--- a/QuanLiDonHang/QuanLiDonHang.csproj
+++ b/QuanLiDonHang/QuanLiDonHang.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\QuanLyBanHoa.Data\QuanLyBanHoa.Data.csproj" />
+    <ProjectReference Include="..\QuanLiHoa\QLHoa.csproj" />
   </ItemGroup>
 
   <ItemGroup>
