--- a/QuanLyBanHoa/App.config
+++ b/QuanLyBanHoa/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <connectionStrings>
     <add name="QuanLyBanHoa"
-         connectionString="Data Source=LAPTOP-08CQM6N0;Initial Catalog=QuanLyBanHoa;User ID=sa;Password=sql2022;TrustServerCertificate=True;"
+         connectionString="Data Source= ADMIN-PC;Initial Catalog=QuanLyBanHoa;User ID=sa;Password=duylun2005;TrustServerCertificate=True;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
