--- a/QuanLyBanHoa/App.config
+++ b/QuanLyBanHoa/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <connectionStrings>
     <add name="QuanLyBanHoa"
-         connectionString="Data Source= ADMIN-PC;Initial Catalog=QuanLyBanHoa;Integrated Security=True;TrustServerCertificate=True;"
+         connectionString="Data Source= LAPTOP-08CQM6N0 ;Initial Catalog=QuanLyBanHoa;Integrated Security=True;TrustServerCertificate=True;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
